--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
  
     <div class="container">
-      <header class="">
-        <h1 id="title">Survey</h1>
+      <header class="header">
+        <h1 id="title">freeCodeCamp Survey</h1>
         <p id="description">Thank you for taking the time to help us improve the platform</p>
       </header>
 
